--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
           <a class="dropdown-item" href="#">Lister</a>
           <a class="dropdown-item" routerLink="/rechercheParType">Recherche Par Type</a>
           <a class="dropdown-item" routerLink="/rechercheParNom" >Recherche Par Nom</a>
+          <a class="dropdown-item" routerLink="/listeTypes" >Gestion des Types</a> 
 
         </div>
 
