--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,10 @@
         <div class="col-md-4">
             <div class="row justify-content-md-center">
                 <div class="col-md-4">
-                    <div class="alert alert-danger" *ngIf="err==1">
-                        <strong>login ou mot de passe erronés..</strong>
-                    </div>                                 
+                    <div class="col-md-4"> 
+                        <div class="alert alert-danger" *ngIf="err==1"> 
+                        <strong>{{message}}</strong> 
+                        </div>   
             <form>
                 <div class="form-group">
                     <label>Nom Utilisateur :</label>
@@ -15,6 +16,7 @@
                     <label>Mot de passe :</label>
                     <input type="password" name="password" [(ngModel)]="user.password" class="form-control">
                 </div>
+                <p>Vous n'avez pas un compte? <a routerLink="/register">S'inscrire </a></p> 
                 <div class="row justify-content-md-center">
                     <button type="button" (click)="onLoggedin()" class="btn btn-success">Connexion</button>
                 </div>
